add front side for employee