@@ -4,6 +4,7 @@ import com.example.project.dto.EmployeeDto;
 import com.example.project.model.Employee;
 import com.example.project.repository.EmployeeRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -18,19 +19,50 @@ public class EmployeeService {
     @Autowired
     private CompanyService companyService;
 
-
-    public List<EmployeeDto> getAllEmployees() {
-        List<Employee> employees = employeeRepository.findAll();
-        return employees.stream()
+    public Page<EmployeeDto> getEmployees(int page, int size, String sort) {
+        var list = employeeRepository.findAll(PageRequest.of(page, size, Sort.by(sort)));
+        return toPage(list.getContent(), PageRequest.of(list.getNumber(), list.getSize(), list.getSort()));
+    }
+    private Page<EmployeeDto> toPage(List<Employee> employees, Pageable pageable) {
+        var list = employees.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
+        if (pageable.getOffset() >= list.size()) {
+            return Page.empty();
+        }
+        int startIndex = (int) pageable.getOffset();
+        int endIndex = (int) ((pageable.getOffset() + pageable.getPageSize()) > list.size() ?
+                list.size() :
+                pageable.getOffset() + pageable.getPageSize());
+        List<EmployeeDto> subList = list.subList(startIndex, endIndex);
+        return new PageImpl<>(subList, pageable, list.size());
     }
 
-    public Optional<Employee> getEmployeeById(Long id) {
-        return employeeRepository.findById(id);
+//    public List<EmployeeDto> getAllEmployees() {
+//        List<Employee> employees = employeeRepository.findAll();
+//        return employees.stream()
+//                .map(this::convertToDto)
+//                .collect(Collectors.toList());
+//    }
+
+    public EmployeeDto getEmployeeById(Long id) {
+        var employee = employeeRepository.findById(id).get();
+        return convertToDto(employee);
+    }
+    public Optional<Employee> getEmployee(Long id){
+        return Optional.of(employeeRepository.findById(id).get());
     }
 
     public EmployeeDto saveEmployee(EmployeeDto employeeDto) {
+        Employee employee = convertToEntity(employeeDto);
+        employee = employeeRepository.save(employee);
+        return convertToDto(employee);
+    }
+    public EmployeeDto updateEmployee(EmployeeDto employeeDto) {
+        boolean existingEmmployee = employeeRepository.existsById(employeeDto.getId());
+        if(existingEmmployee == Boolean.FALSE){
+            throw new IllegalArgumentException("Employee with name " + employeeDto.getFirstName() + " not found.");
+        }
         Employee employee = convertToEntity(employeeDto);
         employee = employeeRepository.save(employee);
         return convertToDto(employee);
@@ -40,17 +72,14 @@ public class EmployeeService {
         employeeRepository.deleteById(id);
     }
     public EmployeeDto convertToDto(Employee employee) {
-        var company = companyService.getCompanyById(employee.getCompany().getId());
-        if(company.isEmpty()){
-            throw new NoSuchElementException("Company not found with id: "+employee.getCompany());
-        }
+        var company = companyService.getCompany(employee.getCompany().getId());
         return EmployeeDto.builder()
                 .id(employee.getId())
                 .firstName(employee.getFirstName())
                 .lastName(employee.getLastName())
                 .middleName(employee.getMiddleName())
                 .email(employee.getEmail())
-                .companyId(company.get().getId())
+                .companyId(company.getId())
                 .build();
     }
 
